[gd_scene load_steps=9 format=2]

[ext_resource path="res://Things/Tafel/Tafel.gd" type="Script" id=1]
[ext_resource path="res://Screens/Menu/Confetti2.png" type="Texture" id=2]
[ext_resource path="res://Screens/Game/fanfare.ogg" type="AudioStream" id=3]
[ext_resource path="res://Screens/Game/pop.ogg" type="AudioStream" id=4]
[ext_resource path="res://Things/Tafel/Tafel.png" type="Texture" id=5]
[ext_resource path="res://Screens/Menu/Pangolin-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Screens/Menu/RichTextLabel.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 67
font_data = ExtResource( 6 )

[node name="Tafel" type="Node2D"]
script = ExtResource( 1 )

[node name="Tafel" type="Sprite" parent="."]
position = Vector2( 936, 562 )
texture = ExtResource( 5 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 933, 424 )
z_index = 800
emitting = false
amount = 60
lifetime = 5.0
one_shot = true
explosiveness = 1.0
texture = ExtResource( 2 )
direction = Vector2( 0, -1 )
gravity = Vector2( 0, 500 )
initial_velocity = 786.39
initial_velocity_random = 0.5
angle = 720.0
angle_random = 1.0
scale_amount = 0.3
hue_variation = 0.27
hue_variation_random = 0.73

[node name="FamfareAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="PopAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 1.283

[node name="ParticleTimer" type="Timer" parent="."]
wait_time = 0.669

[node name="Messages" type="Node2D" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="Messages"]
visible = false
margin_left = 411.0
margin_top = 167.0
margin_right = 1457.0
margin_bottom = 289.0
custom_colors/default_color = Color( 0.247059, 0.145098, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][tornado radius=2 freq=2]Maybe try sharing a little next time![/tornado]"
text = "Maybe try sharing a little next time!"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="Messages"]
visible = false
margin_left = 411.0
margin_top = 167.0
margin_right = 1457.0
margin_bottom = 289.0
custom_colors/default_color = Color( 0.247059, 0.145098, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][tornado radius=2 freq=2]Share cake, make friends![/tornado]"
text = "Share cake, make friends!"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="Messages"]
visible = false
margin_left = 411.0
margin_top = 167.0
margin_right = 1457.0
margin_bottom = 289.0
custom_colors/default_color = Color( 0.247059, 0.145098, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][tornado radius=2 freq=2]That's a big piece for yourself![/tornado]"
text = "That's a big piece for yourself!"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="Messages"]
visible = false
margin_left = 307.0
margin_top = 167.0
margin_right = 1561.0
margin_bottom = 301.0
custom_colors/default_color = Color( 0.247059, 0.145098, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][tornado radius=2 freq=2]Aaaah the exact right amount of cake! :)[/tornado]"
text = "Aaaah the exact right amount of cake! :)"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel5" type="RichTextLabel" parent="Messages"]
visible = false
margin_left = 411.0
margin_top = 167.0
margin_right = 1457.0
margin_bottom = 289.0
custom_colors/default_color = Color( 0.247059, 0.145098, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][tornado radius=2 freq=2]No cake for yourself? :([/tornado]"
text = "No cake for yourself? :("
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
